// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doGetNextListing() action creator should create the correct actions for when the get next product listing procedure is successful without receiving options: Get product infinite listing success payload without receiving options 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "facets": Object {
        "categories_144307": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 13,
          "description": "Women",
          "groupType": 6,
          "groupsOn": 0,
          "id": "categories_144307",
          "parentId": "categories_0",
          "slug": "women",
          "url": "women",
          "value": 144307,
          "valueUpperBound": 0,
        },
        "categories_144331": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 2,
          "description": "Accessories",
          "groupType": 6,
          "groupsOn": 0,
          "id": "categories_144331",
          "parentId": "categories_144307",
          "slug": "women-accessories",
          "url": "women-accessories",
          "value": 144331,
          "valueUpperBound": 0,
        },
        "categories_144424": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 1,
          "description": "Special Accessories",
          "groupType": 6,
          "groupsOn": 0,
          "id": "categories_144424",
          "parentId": "categories_144418",
          "slug": "women-specials-special-accessories",
          "url": "women-specials-special-accessories",
          "value": 144424,
          "valueUpperBound": 0,
        },
        "colors_1": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 4,
          "description": "BLACK",
          "groupType": 11,
          "groupsOn": 0,
          "id": "colors_1",
          "parentId": "colors_0",
          "slug": null,
          "url": "?colors=1",
          "value": 1,
          "valueUpperBound": 0,
        },
        "pricetype_0": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 13,
          "description": "FullPrice",
          "groupType": 14,
          "groupsOn": 0,
          "id": "pricetype_0",
          "parentId": "pricetype_0",
          "slug": "fullprice",
          "url": "fullprice",
          "value": 0,
          "valueUpperBound": 0,
        },
        "sizes_22_144307": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 5,
          "description": "36",
          "groupType": 9,
          "groupsOn": 144307,
          "id": "sizes_22_144307",
          "parentId": "sizes_0",
          "slug": null,
          "url": "?sizes=22",
          "value": 22,
          "valueUpperBound": 0,
        },
      },
      "products": Object {
        "12913172": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": undefined,
          "grouping": undefined,
          "groupingProperties": undefined,
          "id": 12913172,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913172",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
        "12913174": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": Object {
            "entries": Array [
              Object {
                "images": Array [
                  Object {
                    "order": 1,
                    "size": "50",
                    "sources": Object {
                      "50": "image-1",
                    },
                    "url": "image-1",
                  },
                ],
                "merchantId": 9359,
                "productId": 12912485,
                "shortDescription": "Cotton Patchwork Trousers",
              },
            ],
            "remaining": 15,
            "totalItems": 20,
          },
          "grouping": undefined,
          "groupingProperties": undefined,
          "id": 12913174,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913174",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
      },
      "searchResults": Object {
        "/us/listing/woman/clothing?categories=135971&colors=6": Object {
          "breadCrumbs": Array [
            Object {
              "link": "shopping/woman",
              "slug": "woman",
              "text": "Woman",
            },
          ],
          "config": Object {
            "pageSize": 20,
          },
          "facetGroups": Array [
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 2,
              "description": "Categories",
              "dynamic": 0,
              "format": "hierarchical",
              "key": "categories",
              "order": 0,
              "type": 6,
              "values": Array [
                Array [
                  "categories_144331",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 3,
              "description": "Categories",
              "dynamic": 0,
              "format": "hierarchical",
              "key": "categories",
              "order": 0,
              "type": 6,
              "values": Array [
                Array [
                  "categories_144424",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 1,
              "description": "Categories",
              "dynamic": 0,
              "format": "hierarchical",
              "key": "categories",
              "order": 0,
              "type": 6,
              "values": Array [
                Array [
                  "categories_144307",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 0,
              "description": "Sizes",
              "dynamic": 0,
              "format": "multiple",
              "key": "sizes",
              "order": 4,
              "type": 9,
              "values": Array [
                Array [
                  "sizes_22_144307",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 0,
              "description": "Colors",
              "dynamic": 0,
              "format": "multiple",
              "key": "colors",
              "order": 5,
              "type": 11,
              "values": Array [
                Array [
                  "colors_1",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 0,
              "description": "PriceType",
              "dynamic": 0,
              "format": "multiple",
              "key": "pricetype",
              "order": 6,
              "type": 14,
              "values": Array [
                Array [
                  "pricetype_0",
                ],
              ],
            },
          ],
          "filterSegments": Array [
            Object {
              "deep": 1,
              "description": "Women",
              "facetId": "categories_144307",
              "fromQueryString": false,
              "gender": 0,
              "key": "categories",
              "negativeFilter": false,
              "order": 0,
              "parentId": 0,
              "slug": "women",
              "type": 6,
              "value": 144307,
              "valueUpperBound": 0,
            },
          ],
          "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
          "name": null,
          "products": Object {
            "entries": Array [
              13436973,
              12913172,
              12913174,
            ],
            "number": 1,
            "totalItems": 40,
            "totalPages": 2,
          },
        },
      },
    },
    "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
    "result": "/us/listing/woman/clothing?categories=135971&colors=6",
  },
  "type": "@farfetch/blackout-core/GET_LISTING_SUCCESS",
}
`;

exports[`doGetNextListing() action creator should create the correct actions for when the get next product listing procedure is successful: Get product infinite listing success payload 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "facets": Object {
        "categories_144307": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 13,
          "description": "Women",
          "groupType": 6,
          "groupsOn": 0,
          "id": "categories_144307",
          "parentId": "categories_0",
          "slug": "women",
          "url": "women",
          "value": 144307,
          "valueUpperBound": 0,
        },
        "categories_144331": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 2,
          "description": "Accessories",
          "groupType": 6,
          "groupsOn": 0,
          "id": "categories_144331",
          "parentId": "categories_144307",
          "slug": "women-accessories",
          "url": "women-accessories",
          "value": 144331,
          "valueUpperBound": 0,
        },
        "categories_144424": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 1,
          "description": "Special Accessories",
          "groupType": 6,
          "groupsOn": 0,
          "id": "categories_144424",
          "parentId": "categories_144418",
          "slug": "women-specials-special-accessories",
          "url": "women-specials-special-accessories",
          "value": 144424,
          "valueUpperBound": 0,
        },
        "colors_1": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 4,
          "description": "BLACK",
          "groupType": 11,
          "groupsOn": 0,
          "id": "colors_1",
          "parentId": "colors_0",
          "slug": null,
          "url": "?colors=1",
          "value": 1,
          "valueUpperBound": 0,
        },
        "pricetype_0": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 13,
          "description": "FullPrice",
          "groupType": 14,
          "groupsOn": 0,
          "id": "pricetype_0",
          "parentId": "pricetype_0",
          "slug": "fullprice",
          "url": "fullprice",
          "value": 0,
          "valueUpperBound": 0,
        },
        "sizes_22_144307": Object {
          "_isActive": false,
          "_isDisabled": false,
          "count": 5,
          "description": "36",
          "groupType": 9,
          "groupsOn": 144307,
          "id": "sizes_22_144307",
          "parentId": "sizes_0",
          "slug": null,
          "url": "?sizes=22",
          "value": 22,
          "valueUpperBound": 0,
        },
      },
      "products": Object {
        "12913172": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": undefined,
          "grouping": undefined,
          "groupingProperties": undefined,
          "id": 12913172,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg?c=2",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913172",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
        "12913174": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": Object {
            "entries": Array [
              Object {
                "images": Array [
                  Object {
                    "order": 1,
                    "size": "50",
                    "sources": Object {
                      "50": "image-1",
                    },
                    "url": "image-1",
                  },
                ],
                "merchantId": 9359,
                "productId": 12912485,
                "shortDescription": "Cotton Patchwork Trousers",
              },
            ],
            "remaining": 15,
            "totalItems": 20,
          },
          "grouping": undefined,
          "groupingProperties": undefined,
          "id": 12913174,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg?c=2",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913174",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
      },
      "searchResults": Object {
        "/us/listing/woman/clothing?categories=135971&colors=6": Object {
          "breadCrumbs": Array [
            Object {
              "link": "shopping/woman",
              "slug": "woman",
              "text": "Woman",
            },
          ],
          "config": Object {
            "pageSize": 20,
          },
          "facetGroups": Array [
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 2,
              "description": "Categories",
              "dynamic": 0,
              "format": "hierarchical",
              "key": "categories",
              "order": 0,
              "type": 6,
              "values": Array [
                Array [
                  "categories_144331",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 3,
              "description": "Categories",
              "dynamic": 0,
              "format": "hierarchical",
              "key": "categories",
              "order": 0,
              "type": 6,
              "values": Array [
                Array [
                  "categories_144424",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 1,
              "description": "Categories",
              "dynamic": 0,
              "format": "hierarchical",
              "key": "categories",
              "order": 0,
              "type": 6,
              "values": Array [
                Array [
                  "categories_144307",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 0,
              "description": "Sizes",
              "dynamic": 0,
              "format": "multiple",
              "key": "sizes",
              "order": 4,
              "type": 9,
              "values": Array [
                Array [
                  "sizes_22_144307",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 0,
              "description": "Colors",
              "dynamic": 0,
              "format": "multiple",
              "key": "colors",
              "order": 5,
              "type": 11,
              "values": Array [
                Array [
                  "colors_1",
                ],
              ],
            },
            Object {
              "_clearUrl": null,
              "_isClearHidden": false,
              "_isClosed": false,
              "deep": 0,
              "description": "PriceType",
              "dynamic": 0,
              "format": "multiple",
              "key": "pricetype",
              "order": 6,
              "type": 14,
              "values": Array [
                Array [
                  "pricetype_0",
                ],
              ],
            },
          ],
          "filterSegments": Array [
            Object {
              "deep": 1,
              "description": "Women",
              "facetId": "categories_144307",
              "fromQueryString": false,
              "gender": 0,
              "key": "categories",
              "negativeFilter": false,
              "order": 0,
              "parentId": 0,
              "slug": "women",
              "type": 6,
              "value": 144307,
              "valueUpperBound": 0,
            },
          ],
          "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
          "name": null,
          "products": Object {
            "entries": Array [
              13436973,
              12913172,
              12913174,
            ],
            "number": 1,
            "totalItems": 40,
            "totalPages": 2,
          },
        },
      },
    },
    "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
    "result": "/us/listing/woman/clothing?categories=135971&colors=6",
  },
  "type": "@farfetch/blackout-core/GET_LISTING_SUCCESS",
}
`;
